# ai-agent

./: .gitignore  PROJECT_PLAN.md  README.md  docker-compose.yml
backend/: .env.example  mcp_servers.example.json  mcp_servers.json  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  llm.py  nodes.py  state.py  tools.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py
backend/app/mcp/: client.py  config.py
backend/app/schemas/: __init__.py
backend/app/vectorstore/: client.py  ingest.py
backend/chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/mcp_server/: MCP_SETUP.md  mcp_http_server.py  mcp_server.py
backend/tests/: test_agent_graph.py  test_agent_nodes.py  test_api.py  test_health.py  test_mcp_config.py  test_mcp_registry.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
infrastructure/: opensearch.tf  outputs.tf  provider.tf  variables.tf
