[project]
name = "chatbot-backend"
version = "0.1.0"
description = "AI agent chatbot backend (FastAPI + LangGraph + OpenSearch)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "opensearch-py>=2.6",
    "redis>=5.0",
    "httpx>=0.27",
    "mcp>=1.2",
    "azure-identity>=1.17.0",
    "langchain-mcp-adapters>=0.1",
    "langsmith>=0.1.147",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
